--- a/frontend/vera_frontend/src/app/shared/components/navbar/navbar.html
+++ b/frontend/vera_frontend/src/app/shared/components/navbar/navbar.html
@@ -5,7 +5,7 @@
       <!-- Logo -->
       <div class="shrink-0">
         <a href="#" class="text-2xl font-bold text-blue-600">
-          MonApp
+          Vera
         </a>
       </div>
 
