--- a/frontend/vera_frontend/src/app/app.html
+++ b/frontend/vera_frontend/src/app/app.html
@@ -1,4 +1,5 @@
-<div class="min-h-screen pt-4 pl-2 pr-2">
+<div class="min-h-screen pt-4">
+  <div class="min-h-screen pt-16 bg-cover bg-center bg-no-repeat" style="background-image: url('assets/images/home-background.png');">
   <app-navbar isMenuOpen="false"></app-navbar>
   <main class="flex-1">
     <router-outlet></router-outlet>
