--- a/frontend/vera_frontend/src/app/shared/components/input/input.html
+++ b/frontend/vera_frontend/src/app/shared/components/input/input.html
@@ -8,11 +8,8 @@
           <div class="flex items-center gap-2 bg-white rounded-lg px-3 py-2 border border-stone-200">
             
             <!-- Icône fichier -->
-            <div class="w-8 h-8 flex items-center justify-center rounded bg-indigo-100">
-              <svg class="w-4 h-4 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" 
-                      d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-              </svg>
+            <div class="w-8 h-8 flex items-center justify-center rounded bg-secondary-blue-100">
+              <img src="assets/images/file-text.png" width="24" height="24" alt="image fichier"/>
             </div>
             
             <!-- Info fichier -->
@@ -50,17 +47,26 @@
 
       <!-- Barre du bas : icônes à gauche, bouton envoi à droite -->
       <div class="flex items-center justify-between">
-        
+        <div gap="10" class="flex items-center space-x-4">
         <!-- Icône attachement -->
         <button 
           type="button"
           (click)="onAttach()"
           class="text-stone-500 hover:text-stone-700 transition-colors cursor-pointer">
-          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" 
-                  d="M15.172 7l-6.586 6.586a2 2 0 102.828 2.828l6.414-6.586a4 4 0 00-5.656-5.656l-6.415 6.585a6 6 0 108.486 8.486L20.5 13" />
-          </svg>
+          <img src="assets/images/paperclip.png" width="24" height="24" alt="Icône attachement"/>
         </button>
+         <!-- Icône microphone -->
+    <button 
+      type="button"
+      (click)="onMicClick()"
+      class="text-stone-500 hover:text-stone-700 transition-colors cursor-pointer"
+      [class.text-red-500]="isRecording">
+      <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" 
+              d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z" />
+      </svg>
+    </button>
+        </div>
 
         <!-- Input file caché -->
         <input 
@@ -77,7 +83,7 @@
           (click)="onSend()"
           [disabled]="!message.trim() && attachedFiles.length === 0"
           class="shrink-0 w-10 h-10 flex items-center justify-center rounded-full bg-stone-700 text-white hover:bg-stone-800 transition-colors disabled:bg-gray-400 disabled:opacity-100 enabled:cursor-pointer">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-send-icon lucide-send"><path d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"/><path d="m21.854 2.147-10.94 10.939"/></svg>
+          <img src="assets/images/send.png" width="24" height="24" alt="Icône envoi"/>
         </button>
       </div>
     </div>
@@ -97,9 +103,8 @@
           [class.hover:bg-neutral-beige-100]="selectedSuggestionIndex !== i">
           
           <!-- Icône avion -->
-<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-send-icon lucide-send"><path d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"/><path d="m21.854 2.147-10.94 10.939"/></svg>          
+          <img src="assets/images/send-black.png" width="18" height="18" alt="Icône avion noir"/>
           <span class="text-sm text-stone-700">{{ suggestion.text }}</span>
-          
           <!-- Icône crayon sur sélection -->
           @if (selectedSuggestionIndex === i) {
             <svg 
